--- a/maps/templates/map-template.html
+++ b/maps/templates/map-template.html
@@ -18,6 +18,7 @@
 		<title>Maps samples</title>
 	</header>
 	<body>
+		<!-- Maps Toolbar-->
 		<nav id="toolbar" class="navbar navbar-expand-lg navbar-light bg-light">
 			<a class="navbar-brand" href="#">Maps RED</a>
 					
@@ -36,8 +37,10 @@
 			</div>			
 		</nav>		
 			
+		<!-- Maps Dashboard -->
 		<div id="container" style="width: 100%; height: 100vh; overflow: auto;">
 			<div id="map" class="map"></div>
+			<div id="popup"></div>
 		</div>
 	</body>
 </html>
