--- a/maps/templates/map-template.html
+++ b/maps/templates/map-template.html
@@ -13,6 +13,7 @@
 		<script type="text/javascript" src="socket.io.js"></script>
 		<script type="text/javascript" src="jspdf.min.js"></script>
 		<script type="text/javascript" src="ol.js"></script>
+		<script type="text/javascript" src="moment-with-locales.js"></script>
 
 		<script type="text/javascript" src="map-template.js"></script>
 		<title>Maps samples</title>
@@ -21,17 +22,22 @@
 		<!-- Maps Toolbar-->
 		<nav id="toolbar" class="navbar navbar-expand-lg navbar-light bg-light">
 			<a class="navbar-brand" href="#">Maps RED</a>
-					
+			<ul class="navbar-nav ml-auto flex-nowrap">
+				<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					Export Chart
+					</a>
+					<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+						<a id='image' class="dropdown-item" href="#">Export to Image</a>
+						<a id='pdf' class="dropdown-item" href="#">Export to Pdf</a>
+					</div>
+				</li>
+			</ul>		
+
 			<div class="collapse navbar-collapse flex-grow-1 text-right">
 				<ul class="navbar-nav ml-auto flex-nowrap">
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						Export Chart
-						</a>
-						<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-							<a id='image' class="dropdown-item" href="#">Export to Image</a>
-							<a id='pdf' class="dropdown-item" href="#">Export to Pdf</a>
-						</div>
+					<li class="nav-item active">
+						<label id="lastUpdated">Last update at </label>						
 					</li>
 				</ul>
 			</div>			
@@ -41,6 +47,7 @@
 		<div id="container" style="width: 100%; height: 100vh; overflow: auto;">
 			<div id="map" class="map"></div>
 			<div id="popup"></div>
+			<div id="tooltip"></div>
 		</div>
 	</body>
 </html>
